Task #71 : Some refactoring in bmi calculator